Remove search container and replace with location header

--- a/index.html
+++ b/index.html
@@ -20,23 +20,25 @@
               </path>
             </g>
           </svg>
+          <p class="tagline">For the city that never sleeps</p>
         </div>
       </div>
     </header>
     <main>
       <div id="map"></div>
       <div class="locations-container">
-        <div class="locations-search-container">
-          <div class="search-input-container">
-            <input type="search" placeholder="Find a store">
-
+        <div class="locations-header-container">
+          <div class="locations-header">
+            <p>New York Locations</p>
           </div>
-
         </div>
-
+        <div class="locations">
+        </div>
       </div>
     </main>
-    <script src="mapLogic.js">
+    <script src="js/dataLogic.js">
+    </script>
+    <script src="js/mapLogic.js">
     </script>
   </body>
 </html>
