--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.1/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css">
-    <title>GL-JS Take-Home Challenge</title>
+    <title>NY Starbucks Locator</title>
   </head>
   <body>
     <header class="header">
